# CV-Counter

./: .gitignore  Main.py  Readme.md  TelemetryServer.py  config.yaml  config.yaml.bac  configure.sh  counter.py  draw.py  eggcounter.py  fastapi_server.py  flask_server.py  index.html  install_unit.sh  localDB.py  pyproject.toml  requirements.txt  requirements_installation.sh  rsync_frames  testNode.py  tracker.yaml
docs/: API.md
front/: index.html  script.js
models/eggs_YOLOv8n_192/: fingerprint.pb  metadata.yaml
models/eggs_YOLOv8n_192/variables/: variables.data-00000-of-00001  variables.index
models/eggs_YOLOv8n_224/: fingerprint.pb  metadata.yaml
models/eggs_YOLOv8n_224/variables/: variables.data-00000-of-00001  variables.index
static/css/: styles.css
static/js/: script.js
templates/: index.html  login.html
